--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": ["mcp", "blinkit", "grocery", "ai", "claude"],
+  "keywords": [
+    "mcp",
+    "blinkit",
+    "grocery",
+    "ai",
+    "claude"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^25.3.0",
+    "@types/pngjs": "^6.0.5",
+    "@types/qrcode": "^1.5.6",
     "tsx": "^4.21.0",
     "typescript": "^5.8.0",
     "vitest": "^3.0.0"
@@ -27,7 +35,10 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.27.1",
+    "@paulmillr/qr": "^0.3.0",
     "playwright": "^1.58.2",
+    "pngjs": "^7.0.0",
+    "qrcode": "^1.5.4",
     "zod": "^4.3.6"
   }
 }
