Add manifest and configuration files, enhance build process, and update documentation. Introduced manifest.json and smithery.yaml for application configuration. Updated .gitignore and .npmignore to include new files. Enhanced build script for .mcpb bundle creation and refined TypeScript configuration for better output management. Updated README.md to reflect repository changes and configuration options.

--- a/.npmignore
+++ b/.npmignore
@@ -7,4 +7,11 @@ scripts/
 *.md
 !README.md
 tsconfig.json
+tsconfig.build.json
+vitest.config.*
+.env*
 pnpm-lock.yaml
+manifest.json
+smithery.yaml
+*.mcpb
+REQUIREMENTS.md
